| Bug #36467 | Falcon assertion in ha_partition.cc: virtual int ha_partition::extra() | ||
|---|---|---|---|
| Submitted: | 2 May 2008 12:13 | Modified: | 8 Jan 10:58 |
| Reporter: | Hakan Kuecuekyilmaz | ||
| Status: | Closed | ||
| Category: | Server: Falcon | Severity: | S3 (Non-critical) |
| Version: | 6.0, 6.0-falcon | OS: | Any |
| Assigned to: | Vladislav Vaintroub | Target Version: | 6.0.6 |
| Triage: | D1 (Critical) / R2 (Low) / E2 (Low) | ||
[2 May 2008 12:13]
Hakan Kuecuekyilmaz
[2 May 2008 13:34]
Miguel Solorzano
Thank you for the bug report.
[2 May 2008 13:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/46291 ChangeSet@1.2665, 2008-05-02 13:35:06+02:00, vvaintroub@wva. +2 -0 Bug#36467 - ha_partition::extra runs into assertion when called with recently introduced HA_EXTRA_ORDERBY_LIMIT or HA_EXTRA_NO_ORDERBY_LIMIT flags. Fix is to accept the flags and ignore them for now. Also, removed 2 fprintf() calls from ha_falcon.cpp
[2 May 2008 16:09]
Kevin Lewis
Vlad, Thanks for jumping in to fix this so quickly.
[22 Aug 2008 20:50]
Kevin Lewis
Fix is in version 6.0.6
[8 Jan 10:58]
MC Brown
Internal change. No documentation needed.
