Bug#36467 - ha_partition::extra runs into assertion when called with recently introduced HA_EXTRA_ORDERBY_LIMIT or HA_EXTRA_NO_ORDERBY_LIMIT flags.

Fix is to accept the flags and ignore them for now.

Also, removed 2 fprintf() calls from ha_falcon.cpp